<resources>
    <string name="app_name">Tracing V2</string>
    <string name="Tracing">Login</string>
    <string name="correo">example@tracing.com</string>
    <string name="contraseña">Contraseña</string>
    <string name="aceptar">Iniciar</string>
    <string name="registro">Crear Cuenta?</string>
    <string name="repcontraseña">Repetir Contraseña</string>
    <string name="perfil">Mi Perfil</string>
    <string name="sesion">Cerrar Sesion</string>
    <string name="titulo">Datos del Usuario</string>
    <string name="principal">Principal</string>
    <string name="login">Tracing</string>
    <string name="continuar">Continuar</string>
    <string name="mail">Correo:</string>
    <string name="image">Logo Tracing</string>
    <string name="descripcion">Mejorar la seguridad de tu hogar, mediante nuestro sistema de georreferenciacion.</string>
    <string name="registros">Crear Cuenta</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Inicio</string>
    <string name="mapas">Mapa</string>
    <string name="eventos">Eventos</string>
</resources>
