<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpapper"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/iLog"
        android:layout_width="207dp"
        android:layout_height="136dp"
        android:layout_marginEnd="119dp"
        android:layout_marginStart="98dp"

        android:layout_marginTop="40dp"
        android:src="@drawable/logodos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginTop="28dp"
        android:background="@color/powderblue"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColor="@color/darkslateblue"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iemail"
        app:layout_constraintTop_toBottomOf="@+id/iLog" />

    <ImageView
        android:id="@+id/iemail"
        android:layout_width="28dp"
        android:layout_height="21dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="216dp"
        android:src="@drawable/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginTop="40dp"
        android:background="@color/powderblue"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textColor="@color/darkslateblue"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ipass"
        app:layout_constraintTop_toBottomOf="@+id/eCorreo" />

    <ImageView
        android:id="@+id/ipass"
        android:layout_width="28dp"
        android:layout_height="21dp"
        android:layout_marginBottom="333dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iemail"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/boton_redondo"
        android:onClick="enviardatos"
        android:text="@string/aceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eContraseña" />

    <TextView
        android:id="@+id/tRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="58dp"
        android:text="@string/registro"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bRegistro" />


</android.support.constraint.ConstraintLayout>